remove unnecessary files

--- a/lab09_gazebo/CMakeLists.txt
+++ b/lab09_gazebo/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(catkin REQUIRED
   COMPONENTS
-     moveit_core
+  #    moveit_core
   #    moveit_visual_tools
-     moveit_ros_planning
-     moveit_ros_planning_interface
+  #    moveit_ros_planning
+  #    moveit_ros_planning_interface
   #    pluginlib
   #    geometric_shapes
   #    pcl_ros
@@ -27,9 +27,9 @@ catkin_package(
   LIBRARIES
   INCLUDE_DIRS
   CATKIN_DEPENDS
-    moveit_core
+  #    moveit_core
   #    moveit_visual_tools
-     moveit_ros_planning_interface
+  #    moveit_ros_planning_interface
   #    tf2_geometry_msgs
   #  DEPENDS
   #    EIGEN3
@@ -42,6 +42,6 @@ catkin_package(
 include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
 
 # ${PROJECT_NAME} expands to lab09_gazebo (or whatever the project name is on line 2 of this file)
-add_executable(${PROJECT_NAME}_moveit src/ur5e_move_group_interface.cpp)
-target_link_libraries(${PROJECT_NAME}_moveit ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+#add_executable(${PROJECT_NAME}_moveit src/ur5e_move_group_interface.cpp)
+#target_link_libraries(${PROJECT_NAME}_moveit ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
