--- a/ur5e_epick_moveit_config/package.xml
+++ b/ur5e_epick_moveit_config/package.xml
@@ -3,7 +3,7 @@
   <name>ur5e_epick_moveit_config</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the ur5e with the MoveIt! Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the ur5e_epick with the MoveIt! Motion Planning Framework
   </description>
   <author email="l.dennis@unsw.edu.au">Luke Dennis</author>
   <maintainer email="l.dennis@unsw.edu.au">Luke Dennis</maintainer>
