--- a/lab09_gazebo/package.xml
+++ b/lab09_gazebo/package.xml
@@ -11,9 +11,9 @@
 
     <!-- <build_depend>pluginlib</build_depend> -->
     <!-- <build_depend>eigen</build_depend> -->
-    <!-- <build_depend>moveit_core</build_depend> -->
-    <!-- <build_depend>moveit_ros_planning</build_depend> -->
-    <!-- <build_depend>moveit_ros_planning_interface</build_depend> -->
+    <build_depend>moveit_core</build_depend>
+    <build_depend>moveit_ros_planning</build_depend>
+    <build_depend>moveit_ros_planning_interface</build_depend>
     <!-- <build_depend>geometric_shapes</build_depend> -->
     <!-- <build_depend>moveit_visual_tools</build_depend> -->
     <!-- <build_depend>pcl_ros</build_depend> -->
@@ -23,12 +23,14 @@
     <!-- <build_depend>tf2_eigen</build_depend> -->
     <!-- <build_depend>tf2_geometry_msgs</build_depend> -->
 
-    <!-- <exec_depend>ur5e_moveit_config</exec_depend> -->
+    <exec_depend>ur5e_epick_moveit_config</exec_depend>
+    <exec_depend>ur_description</exec_depend>
+
     <!-- <exec_depend>pluginlib</exec_depend> -->
-    <!-- <exec_depend>moveit_core</exec_depend> -->
+    <exec_depend>moveit_core</exec_depend>
     <!-- <exec_depend>moveit_commander</exec_depend> -->
     <!-- <exec_depend>moveit_fake_controller_manager</exec_depend> -->
-    <!-- <exec_depend>moveit_ros_planning_interface</exec_depend> -->
+    <exec_depend>moveit_ros_planning_interface</exec_depend>
     <!-- <exec_depend>moveit_visual_tools</exec_depend> -->
     <!-- <exec_depend>joy</exec_depend> -->
     <!-- <exec_depend>pcl_ros</exec_depend> -->
