--- a/lab09_gazebo/package.xml
+++ b/lab09_gazebo/package.xml
@@ -15,6 +15,7 @@
 
     <exec_depend>ur5e_epick_moveit_config</exec_depend>
     <exec_depend>ur_description</exec_depend>
+    <exec_depend>ur_kinematics</exec_depend>
 
     <exec_depend>moveit_core</exec_depend>
     <exec_depend>moveit_ros_planning_interface</exec_depend>
