--- a/lab09_gazebo/config/ur5e_controllers.yaml
+++ b/lab09_gazebo/config/ur5e_controllers.yaml
@@ -1,6 +1,8 @@
 joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: &loop_hz 500
+  extra_joints:
+    - name: 'epick_end_effector_joint'
 
 pos_joint_traj_controller:
   type: position_controllers/JointTrajectoryController
