Added joint_state_publisher in ur5e_epick_bringup.launch file, changed ur_kinematics/UR5KinematicsPlugin to kdl_kinematics_plugin/KDLKinematicsPlugin in ur5e_epick_moveit_config/config/kinematics.yaml, and wrote a simple script to test the cartesian movement in the src folder

--- a/lab09_gazebo/CMakeLists.txt
+++ b/lab09_gazebo/CMakeLists.txt
@@ -32,3 +32,6 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE
 add_executable(${PROJECT_NAME}_moveit src/ur5e_epick_move_group_interface.cpp)
 target_link_libraries(${PROJECT_NAME}_moveit ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
+add_executable(cartesian_movement src/cartesian_movement.cpp)
+target_link_libraries(cartesian_movement ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
